--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ show_downloads: [true]
 repository_url: https://github.com/mazy7c8/MEDpress
 owner_url: https://github.com/mazy7c8
 github:
-  windows: https://we.tl/t-Ba7QrDTTcm
+  zip_windows: https://we.tl/t-Ba7QrDTTcm
   
