--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,5 @@ github:
   zip_windows: https://we.tl/t-Ba7QrDTTcm
   repository_url: https://github.com/mazy7c8/MEDpress
   owner_url: https://github.com/mazy7c8
+  zip_linux: https://we.tl/t-AgBIWbTsZJ
   
