--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,5 @@ github:
   repository_url: https://github.com/mazy7c8/MEDpress
   owner_url: https://github.com/mazy7c8
   zip_linux: https://we.tl/t-AgBIWbTsZJ
+  zip_mac: https://we.tl/t-6lGcU7sHEP
   
